force-app/main/default/objects/User/fields/ByPass_RV__c.field-meta.xml
<CustomField>
    <fullName>ByPass_RV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass RV</label>
    <type>Checkbox</type>
</CustomField>