force-app/main/default/objects/User/fields/BypassTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassTrigger__c</fullName>
    <label>BypassTrigger</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TR001ManageContact</fullName>
            </value>
            <value>
                <fullName>TR002ManageOpportunityLineItem</fullName>
            </value>
            <value>
                <fullName>TR003ManageOpportunities</fullName>
            </value>
            <value>
                <fullName>TR004ManageLead</fullName>
            </value>
            <value>
                <fullName>TR005OppLineItem</fullName>
            </value>
            <value>
                <fullName>TR_session_formation</fullName>
            </value>
            <value>
                <fullName>TR006OppLineItem2FieldsNull</fullName>
            </value>
            <value>
                <fullName>TR007Opp2FieldsNull</fullName>
            </value>
            <value>
                <fullName>EventTriggerHandler</fullName>
            </value>
            <value>
                <fullName>TaskTriggerHandler</fullName>
            </value>
            <value>
                <fullName>dlrs_OpportunityLineItemTrigger</fullName>
            </value>
            <value>
                <fullName>TriggerContactBeforeDelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>