force-app/main/default/objects/User/fields/ByPassValidationRule__c.field-meta.xml
<CustomField>
    <fullName>ByPassValidationRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassValidationRule</label>
    <type>Checkbox</type>
</CustomField>