force-app/main/default/objects/User/fields/Contourner_RV_type_d_enregistrement__c.field-meta.xml
<CustomField>
    <fullName>Contourner_RV_type_d_enregistrement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si cette case est cochée, l&apos;utilisateur contourne les règles de validation qui empêchent de modifier les types d&apos;enregistrement.</description>
    <inlineHelpText>Si cochée, les règles de validation de changement de type d&apos;enregistrement ne se déclencheront pas pour cet utilisateur.</inlineHelpText>
    <label>Contourner RV type d&apos;enregistrement</label>
    <type>Checkbox</type>
</CustomField>