force-app/main/default/objects/User/fields/Date_de_fin_de_validite__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_validite__c</fullName>
    <label>Date de fin de validité</label>
    <type>Date</type>
</CustomField>