force-app/main/default/objects/User/fields/Programme_de_predilection__c.field-meta.xml
<CustomField>
    <fullName>Programme_de_predilection__c</fullName>
    <label>Programme de prédilection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>convsta_liste_programme_pour</valueSetName>
    </valueSet>
</CustomField>