force-app/main/default/objects/User/fields/x18caracteres__c.field-meta.xml
<CustomField>
    <fullName>x18caracteres__c</fullName>
    <description>Id Salesforce de l&apos;utilisateur sur 18 caractères</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Id Salesforce de l&apos;utilisateur sur 18 caractères</inlineHelpText>
    <label>x18caracteres</label>
    <type>Text</type>
</CustomField>