force-app/main/default/objects/User/listViews/EXEC_EML_Autres.listView-meta.xml
<ListView>
    <fullName>EXEC_EML_Autres</fullName>
    <columns>CREATED_DATE</columns>
    <columns>MARKETING_USER</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>EML</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>EML</value>
    </filters>
    <filters>
        <field>CORE.USERS.DIVISION</field>
        <operation>notContain</operation>
        <value>Sales</value>
    </filters>
    <label>EXEC - EML/EML Hors sales [Actifs]</label>
    <language>fr</language>
</ListView>