force-app/main/default/objects/User/listViews/FLICHY.listView-meta.xml
<ListView>
    <fullName>FLICHY</fullName>
    <columns>MARKETING_USER</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>SU_ACCESS_EXPIRATION</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Convsta community Login</value>
    </filters>
    <label>Tous (Actif)</label>
    <language>fr</language>
</ListView>