force-app/main/default/objects/User/listViews/Licence_Full.listView-meta.xml
<ListView>
    <fullName>Licence_Full</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Profil limité</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Convsta community Login</value>
    </filters>
    <label>Licence Full</label>
    <language>fr</language>
</ListView>