force-app/main/default/objects/User/listViews/Tous_les_contact_etudiants.listView-meta.xml
<ListView>
    <fullName>Tous_les_contact_etudiants</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>convsta community</value>
    </filters>
    <label>Tous les contact étudiants</label>
    <language>fr</language>
</ListView>