force-app/main/default/objects/User/listViews/Utilisateur_Actifs_et_Connexions_rares.listView-meta.xml
<ListView>
    <fullName>Utilisateur_Actifs_et_Connexions_rares</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Utilisateur _ Actifs et Connexions rares</label>
    <language>fr</language>
</ListView>