force-app/main/default/objects/User/listViews/utilisateur_by_pass_RV.listView-meta.xml
<ListView>
    <fullName>utilisateur_by_pass_RV</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contourner_RV_type_d_enregistrement__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>utilisateur by pass RV</label>
    <language>fr</language>
</ListView>