force-app/main/default/objects/User/listViews/Utilisateur_Non_actifs.listView-meta.xml
<ListView>
    <fullName>Utilisateur_Non_actifs</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Utilisateur _ Non actifs</label>
    <language>fr</language>
</ListView>