force-app/main/default/objects/User/listViews/Utilisateurs_BBA.listView-meta.xml
<ListView>
    <fullName>Utilisateurs_BBA</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>BBA</value>
    </filters>
    <label>Utilisateurs BBA tous campus</label>
    <language>fr</language>
</ListView>