force-app/main/default/objects/User/listViews/Utilisateurs_CASA.listView-meta.xml
<ListView>
    <fullName>Utilisateurs_CASA</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Profil limité</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>CASABLANCA</value>
    </filters>
    <label>Utilisateurs Campus CASA</label>
    <language>fr</language>
</ListView>